<resources>
    <string name="app_name">Safe Call</string>
    <string name="action_settings">Settings</string>
    <string name="action_home">Home</string>
    <string name="add">Add Contacts</string>
    <string name="remove">Remove Contacts</string>
    <string name="title_activity_add_contacts">AddContactsActivity</string>
    <string name="title_activity_remove__contacts">Remove_Contacts</string>
    <string name="title_activity_settings">Settings</string>
    <string name="on_device_fall_detection">Fall Detection on Wearable Device</string>
    <string name="on_phone_fall_detection">Fall Detection on Phone</string>
    <string name="contacts">Contacts</string>
    <string name="stop">STOP</string>
    <string name="no_adapter">No Bluetooth adapter available!</string>
    <string name="BTopened">Bluetooth opened to</string>
    <string name="sent">Sent</string>
    <string name="closed">Closed</string>
    <string name="MacAdress">Mac address</string>
    <string name="button_disconnect">Disconnect</string>
    <string name="button_connect">Connect</string>
    <string name="title_devices">Devices</string>
    <string name="scan">Scan</string>
    <string name="scanning">Scanning...</string>
    <string name="profile">Profile</string>
    <string name="change_name">Change Name</string>
    <string name="name">Name</string>
    <string name="write_name">Write your name</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
</resources>
