<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title_devices"
        android:textColor="#000"
        android:textSize="40dp"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="73dp"
        android:layout_below="@+id/view"
        android:layout_centerHorizontal="true" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#000"
        android:id="@+id/view" />
    <ToggleButton
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:text="@string/scan"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#fff"
        android:textSize="40dp"
        android:id="@+id/scan"
        android:layout_gravity="center_horizontal"
        android:textOff="@string/scan"
        android:textOn="@string/scanning"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <ListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@android:id/list"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/scan"></ListView>
</RelativeLayout>